--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
@@ -45,7 +45,7 @@
               \end{block}
               \vspace{5mm}
 
-        \item \tb{本論文ではマルチスレッドエグゼキュータに焦点を当てる}
+        \item 本論文ではマルチスレッドエグゼキュータに焦点を当てる
     \end{itemize}
 \end{frame}
 
@@ -71,7 +71,7 @@
 
 \begin{frame}{本論文の分析の焦点}
     \fitimage{
-        \tb{本論文では単一のエグゼキュータにおけるチェーンの応答時間に焦点を当てる}
+        本論文では単一のエグゼキュータにおけるチェーンの応答時間に焦点を当てる
         \notes{CPAアプローチ\cite{casini2019response}によってチェーンが複数のエグゼキュータにもまたがる場合に拡張できる}
     }{multi_threaded_executor.png}
 \end{frame}
@@ -103,7 +103,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item ROS 2 マルチスレッドエグゼキュータのスケジューリング動作を紹介する
-        \item \tb{本論文の内容は ROS 2 Foxy Fitzroy に基づいている}
+        \item 本論文の内容は ROS 2 Foxy Fitzroy に基づいている
     \end{itemize}
 
 \end{frame}
@@ -116,7 +116,7 @@
 \end{frame}
 
 \begin{frame}{コールバックの優先順位決定方法}
-    ROS 2 では, \tb{コールバックの優先度は以下 2 つのレベルで決定される}
+    ROS 2 では, コールバックの優先度は以下 2 つの基準で決定される
 
     \begin{block}{コールバックタイプ}
         \setlength{\linewidth}{0.98\columnwidth}
@@ -141,12 +141,12 @@
     \begin{itemize}
         \item \al{yield\_before\_execute} が false に設定されている場合, スレッドは選択されたコールバックの実行をすぐに開始する
         \item yield\_before\_execute が true に設定されている場合, スレッドは再度スケジュールされるまでプロセッサを OS に譲る
-        \item \tb{本論文ではデフォルトの設定である yield\_before\_execute $=$ false とする}
+        \item 本論文ではデフォルトの設定である yield\_before\_execute $=$ false とする
     \end{itemize}
 \end{frame}
 
 \begin{frame}{メッセージキュー}
-    ROS 2 では, \tb{各コールバックに到着したメッセージをバッファリングするためのキュー}があり, その深さはユーザによって指定される
+    ROS 2 では, 各コールバックに到着したメッセージをバッファリングするためのキューがあり, その深さはユーザによって指定される
     \assume{
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
@@ -195,7 +195,7 @@
 
 \begin{frame}{[ワークフロー] コールバック選択後}
     \fitimage{
-        コールバックが選択されると, スレッドは wait\_set からコールバックを削除し, low\_priority\_wait\_mutex をリリースする
+        コールバックが選択されると, \tb{スレッドは wait\_set からコールバックを削除}し, low\_priority\_wait\_mutex をリリースする
     }{workflow4.jpg}
 \end{frame}
 
@@ -206,7 +206,7 @@
 
 \begin{frame}{[ワークフロー] コールバックが選択できない場合}
     \fitimage{
-        全てのコールバックがチェックされ, 実行するコールバックを選択できない場合, スレッドは wait\_set をリセットし, wait\_set を更新する
+        全てのコールバックがチェックされ, 実行するコールバックを選択できない場合, \tb{スレッドは wait\_set をリセットし, wait\_set を更新する}
     }{workflow5.jpg}
 \end{frame}
 
