--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -40,7 +40,7 @@
                     $c_{i, j}^{k}$          & $J_{i}^{k}$ に含まれる$c_{i, j}$ のコールバックインスタンス                                 \\\hline
                     $\mathcal{G}(c_{i,j}) $ & \tabml{$c_{i,j}$が属すmutually exclusiveコールバックグループのインデックス}                 \\\hline
                     $\theta_i$              & \tabml{$\mathcal{C}_{i}$ の各コールバックが属すmutually exclusiveコールバックグループの集合 \\ $\theta_{i}=\cup_{\forall c_{i, j} \in \mathcal{C}_{i}}\left\{\mathcal{G}\left(c_{i, j}\right)\right\}$} \\\hline
-                    $\Omega$                & ready set                                                                                   \\\hline
+                    $\Omega$                & ready セット                                                                                \\\hline
                     $\mathcal{R}_i^{wc}$    & $\mathcal{C}_{i}$の最悪応答時間                                                             \\\hline
                     $J$                     & 任意のチェーンインスタンス                                                                  \\\hline
                     $c_i$                   & $J$の$i$番目のコールバックインスタンス                                                      \\\hline
@@ -73,14 +73,14 @@
         \begin{table}[tb]
             \adjustbox{max width=\textwidth, max height=\slideheight}{
                 \centering\begin{tabular}{|c|l|} \hline
-                    \textbf{Notations}                 & \textbf{Descriptions}                                                              \\\hline
-                    $\mathcal{I}_{k,i}^\mathcal{P} $   & \tabml{$c_i$がブロックされている間に, $c_i$と同じコールバックグループに属す        \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総量} \\\hline
-                    $\mathcal{I}_{k,i}^\mathcal{E} $   & \tabml{$c_i$がブロックされている間に, $c_i$と異なるコールバックグループに属す      \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総量} \\\hline
-                    $\mathcal{I}_{k,i}^\mathcal{B}  $  & \tabml{$[r_i, s_i)$の間に, $c_i$と同じmutually exclusiveコールバックグループに属す \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総量} \\\hline
-                    $\overrightarrow{\mathcal{M}}_{k}$ & $J$に対する$\mathcal{C}_{k}$のスーパー干渉シーケンス                               \\\hline
-                    $\mathcal{Q}_k$                    & lemma2                                                                             \\\hline
-                    $\Phi_{k,i}$                       & $\mathcal{Q}_k$に対する $\mathcal{S}_{k,i}$の寄与 式2                              \\\hline
-                    $ \hat{\Phi} $                     & $\Phi_{k,i}$の上界 式3,4                                                           \\\hline
+                    \textbf{Notations}                 & \textbf{Descriptions}                                                                                                                               \\\hline
+                    $\mathcal{I}_{k,i}^\mathcal{P} $   & \tabml{$c_i$がブロックされている間に, $c_i$と同じコールバックグループに属す                                                                         \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総和} \\\hline
+                    $\mathcal{I}_{k,i}^\mathcal{E} $   & \tabml{$c_i$がブロックされている間に, $c_i$と異なるコールバックグループに属す                                                                       \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総和} \\\hline
+                    $\mathcal{I}_{k,i}^\mathcal{B}  $  & \tabml{$[r_i, s_i)$の間に, $c_i$と同じmutually exclusiveコールバックグループに属す                                                                  \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総和} \\\hline
+                    $\overrightarrow{\mathcal{M}}_{k}$ & $J$に対する$\mathcal{C}_{k}$の超干渉シーケンス                                                                                                      \\\hline
+                    $\mathcal{Q}_k$                    & $\mathcal{Q}_{k}=\sum_{i=1}^{|\mathcal{C}|}\left(\mathcal{I}_{k, i}+(m-1) \mathcal{I}_{k, i}^{\mathcal{B}}-\mathcal{I}_{k, i}^{\mathcal{E}}\right)$ \\\hline
+                    $\Phi_{k,i}$                       & $\mathcal{Q}_k$に対する $\mathcal{S}_{k,i}$の寄与                                                                                                   \\\hline
+                    $ \hat{\Phi} $                     & $\Phi_{k,i}$の上界                                                                                                                                  \\\hline
                 \end{tabular}
             }
         \end{table}
@@ -98,13 +98,13 @@
 
     \begin{itemize}
         \item \tb{本論文では, $m$ スレッド上のマルチスレッドエグゼキュータによって}\\\tb{スケジュールされる一連の独立したチェーン $\Gamma=\left\{\mathcal{C}_{1}, \mathcal{C}_{2}, \cdots, \mathcal{C}_{|\Gamma|}\right\}$ を検討}
-        \begin{itemize}
-            \item \db{$|\Gamma|$}: $\Gamma$内のチェインの数
-        \end{itemize}
+              \begin{itemize}
+                  \item \db{$|\Gamma|$}: $\Gamma$内のチェインの数
+              \end{itemize}
         \item 各チェーン $\mathcal{C}_{i} \in \Gamma$ は, コールバックのシーケンス $\mathcal{C}_{i}=\left\{c_{i, 1}, c_{i, 2}, \cdots, c_{i,\left|\mathcal{C}_{i}\right|}\right\}$ で構成される
-        \begin{itemize}
-            \item \db{$\left|\mathcal{C}_{i}\right|$}: $\mathcal{C}_{i}$内のコールバックの数
-        \end{itemize}
+              \begin{itemize}
+                  \item \db{$\left|\mathcal{C}_{i}\right|$}: $\mathcal{C}_{i}$内のコールバックの数
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
@@ -112,7 +112,7 @@
     \begin{itemize}
         \item チェーン $\mathcal{C}_{i}$ は, \al{チェーンインスタンス}の無限シーケンスをリリースする
         \item \al{周期} $T_{i}$は, 2 つの連続するチェーンインスタンスのリリース時刻の間の最小間隔
-        \item \al{相対デッドライン} $D_{i}$ すなわち, 時間 $r$ でリリースされた $\mathcal{C}_{i}$ の各チェーンインスタンスは, その絶対デッドライン $r+D_{i}$ までに終了する必要がある
+        \item 各チェーンインスタンスは \al{相対デッドライン} $D_{i}$ を持つ, すなわち, 時間 $r$ でリリースされた $\mathcal{C}_{i}$ の各チェーンインスタンスは, その絶対デッドライン $r+D_{i}$ までに終了する必要がある
               \begin{itemize}
                   \item 制約付きデッドライン, すなわち $D_{i} \leq T_{i}$を想定
               \end{itemize}
@@ -125,7 +125,7 @@
     \begin{itemize}
         \item $J_{i}^{k}$ 内の連続する要素 $c_{i, j}^{k}$ と $c_{i, j+1}^{k}$ の各ペアについて, $c_{i, j}^{k}$ を $c_{i, j+1}^{k}$ の\al{先行要素}, $c_{i, j+1}^{k}$ を $c_{i, j}^{k}$ の\al{後続要素}と呼ぶ
         \item $\mathcal{C}_{i}$ の最初・最後のコールバックを, それぞれ$\mathcal{C}_{i}$ の\al{ソース・シンクコールバック}と呼ぶ
-        \item 非シンクコールバックインスタンス $c_{i, j}^{k}$ が実行を終了すると, 後続のインスタンスを呼び出すメッセージが生成される
+        \item \tb{非シンクコールバックインスタンス $c_{i, j}^{k}$ が実行を終了すると, 後続のインスタンスを呼び出すメッセージを生成する}
     \end{itemize}
 \end{frame}
 
@@ -162,8 +162,11 @@
 
 \begin{frame}{コールバックインスタンスのリリースタイミング}
     \begin{itemize}
-        \item $J_{i}^{k}$ 内のソースコールバックインスタンス $c_{i, 1}^{k}$ は, $J_{i}^{k}$ のリリースと同時にリリースされる
-        \item $J_{i}^{k}$ 内の非ソースコールバックインスタンスは, その先行の終了時, すなわち, 先行からの入力メッセージが利用可能になった時にリリースされる
+        \item \tb{コールバックインスタンスのリリースタイミングは以下2パターン}
+        \begin{itemize}
+            \item $J_{i}^{k}$ 内のソースコールバックインスタンス $c_{i, 1}^{k}$ は, $J_{i}^{k}$ のリリースと同時にリリースされる
+            \item $J_{i}^{k}$ 内の非ソースコールバックインスタンスは, その先行の終了時, すなわち, 先行からの入力メッセージが利用可能になった時にリリースされる
+        \end{itemize}
         \item 同じコールバックの複数のインスタンスがリリースされた場合, リリース時刻を基準にFIFOにエンキューされる
     \end{itemize}
 \end{frame}
@@ -184,7 +187,7 @@
 \end{frame}
 
 \begin{frame}{pendingコールバックインスタンスの状態}
-    pendingコールバックインスタンス$c_{i, j}$は, ready または Pブロックされている
+    \tb{pendingコールバックインスタンス$c_{i, j}$は, ready または Pブロックされている}
     \begin{itemize}
         \item  $c_{i, j}$ が mutually exclusive コールバックグループに属している場合:
               \begin{itemize}
@@ -200,13 +203,13 @@
 
 \begin{frame}{$\Omega$}
     \begin{itemize}
-        \item エグゼキュータは readyコールバックインスタンスを保持する共通のreadyセット $\Omega$ を持つ
-        \item コールバックインスタンスが実行のために選択されると, $\Omega$ から削除される
+        \item エグゼキュータは readyコールバックインスタンスを保持する共通のreadyセット \al{$\Omega$} を持つ
+        \item \tb{コールバックインスタンスが実行のために選択されると, $\Omega$ から削除される}
     \end{itemize}
 \end{frame}
 
 \begin{frame}{Rブロック, eligible}
-    $\Omega$ 内の ready のコールバックインスタンス $c_{i, j}$ が実行のために選択される条件は eligible であること
+    \tb{$\Omega$ 内の ready のコールバックインスタンス $c_{i, j}$ が実行のために選択される条件は \al{eligible} であること}
     \begin{definition}[Rブロック]
         $c_{i, j}$ が mutually exclusive コールバックグループに属すかつ, $\Omega$ 内に存在し, $c_{i, j}$ と同じグループ内のコールバックのインスタンスが実行されている場合, $c_{i, j}$ は Rブロックされている
     \end{definition}
@@ -216,7 +219,7 @@
 \end{frame}
 
 \begin{frame}{$\Omega$ 内のコールバックインスタンスの状態}
-    $\Omega$ 内のコールバックインスタンスは eligible であるか, Rブロックされている
+    \tb{$\Omega$ 内のコールバックインスタンスは eligible であるか, Rブロックされている}
     \begin{itemize}
         \item $c_{i, j}$ が mutually exclusive コールバックグループに属す場合:
               \begin{itemize}
@@ -231,14 +234,14 @@
 \end{frame}
 
 \begin{frame}{mutually exclusiveコールバックグループの特徴}
-    上記の設計により, 同じmutually exclusiveコールバックグループに属すコールバックのインスタンスは, 並列に実行されない
+    上記の設計により, \tb{同じmutually exclusiveコールバックグループに属すコールバックのインスタンスは並列に実行されない}
 \end{frame}
 
 
 \begin{frame}{ポーリングポイント}
     \begin{itemize}
         \item コールバックインスタンスは, ready でもすぐには $\Omega$ に追加されない
-        \item $\Omega$ に eligible なコールバックが無く, スレッドがアイドル状態の場合にのみ, ready のコールバックインスタンスを $\Omega$ に追加できる
+        \item \tb{$\Omega$ に eligible なコールバックが無く, スレッドがアイドル状態の場合にのみ, ready のコールバックインスタンスを $\Omega$ に追加できる}
               \begin{definition}[ポーリングポイント]
                   ポーリングポイントは $\Omega$ が更新される時点である
               \end{definition}
@@ -256,17 +259,17 @@
 
 \begin{frame}{スレッド}
     \begin{itemize}
-        \item $\Omega$ 内のeligibleなコールバックインスタンスは, $m$ 個のスレッドによって1つずつ選択され, ノンプリエンプティブに実行される
-        \item スレッドとは, 処理リソースの観点から, 対応するプロセッサを表すものである
+        \item \tb{$\Omega$ 内のeligibleなコールバックインスタンスは, $m$ 個のスレッドによって1つずつ選択され, ノンプリエンプティブに実行される}
+        \item スレッドとは, 処理リソースの観点から, 対応するプロセッサを表すもの
         \item スレッドがコールバックインスタンスが実行しているとき\al{ビジーである}と呼び, コールバックインスタンスを実行していないときは\al{アイドル状態}と呼ぶ
     \end{itemize}
 \end{frame}
 
 \begin{frame}{コールバックインスタンスの優先度}
     \begin{itemize}
-        \item eligibleなコールバックインスタンスを選択する順序はそれらの優先度によって決定される
+        \item \tb{eligibleなコールバックインスタンスを選択する順序はそれらの優先度によって決定される}
         \item 各コールバックには固定の固有の優先度があり, 全てのインスタンスがこの優先度を継承する
-        \item \db{$h p\left(c_{i, j}\right)$} を使用して, コールバック $c_{i, j}$ よりも優先度の高いコールバックのセットを示す
+        \item \desc{$h p\left(c_{i, j}\right)$}{コールバック $c_{i, j}$ よりも優先度の高いコールバックのセット}
     \end{itemize}
 \end{frame}
 
@@ -277,6 +280,9 @@
     \begin{definition}[チェーンインスタンス $J_{i}^{k}$ がブロックされている]
         $J_{i}^{k}$ 内のコールバックインスタンスがブロックされている場合, $J_{i}^{k}$ はブロックされている
     \end{definition}
+\end{frame}
+
+\begin{frame}{実行中}
     \begin{definition}[チェーンインスタンス $J_{i}^{k}$ が実行中]
         $J_{i}^{k}$内のコールバックインスタンスが実行中の場合, $J_{i}^{k}$ は実行中である
     \end{definition}
