--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -12,11 +12,11 @@
 
 \begin{frame}{}
     これは, 次の手順で実現される
-    \begin{itemize}
-        \item まず,  $J$ の実行を妨げる可能性のあるコールバックインスタンスの実行シーケンスを特定
-        \item 次に, $c_{i}$ をブロックできるかどうかに応じて, $J$ 内の個々のコールバックインスタンス $c_{i}$ に関して, $\Phi_{k, i}$ に寄与する可能性のあるシーケンス内のコールバックインスタンスを特定する手法を開発
-        \item 最後に, 探索空間を制限する制約を提示し, $\mathcal{Q}_{k}$ の上界を取得
-    \end{itemize}
+    \begin{enumerate}
+        \item $J$ の実行を妨げる可能性のあるコールバックインスタンスの実行シーケンスを特定
+        \item $c_{i}$ をブロックできるかどうかに応じて, $J$ 内の個々のコールバックインスタンス $c_{i}$ に関して, $\Phi_{k, i}$ に寄与する可能性のあるシーケンス内のコールバックインスタンスを特定する手法を開発
+        \item 探索空間を制限する制約を提示し, $\mathcal{Q}_{k}$ の上界を取得
+    \end{enumerate}
 \end{frame}
 
 
@@ -26,7 +26,7 @@
 \begin{frame}{超干渉シーケンス}
     \begin{itemize}
         \item $L$ を $J$ の問題ウィンドウの長さとする
-        \item Lemma 3 によると,  $J$ の問題ウィンドウ中に実行できる $\mathcal{C}_{k}$ のチェーンインスタンスの最大数は $n_{k}(L)$
+        \item \hlink{lemma3}{Lemma 3} によると,  $J$ の問題ウィンドウ中に実行できる $\mathcal{C}_{k}$ のチェーンインスタンスの最大数は $n_{k}(L)$
               \begin{definition}[超干渉シーケンス $\overrightarrow{\mathcal{M}}_{k}$]
                   $\mathcal{C}_{k}$ から $J$ への超干渉シーケンスを $\overrightarrow{\mathcal{M}}_{k}$ は, $\mathcal{C}_{k}$ の $n_{k}(L)$ チェーンインスタンスの実行シーケンスであり, コールバックインスタンスを 1 つずつ順番に実行する
               \end{definition}
@@ -53,7 +53,7 @@
 \begin{frame}{超干渉シーケンスの例}
     \fitimage{
         \begin{itemize}
-            \item $J_{3}^{1}$ の問題ウィンドウの長さは 8 で, その間に $\mathcal{C}_{2}$ の最大 2 つのチェーンインスタンスが実行される可能性がある (Lemma 3)
+            \item $J_{3}^{1}$ の問題ウィンドウの長さは 8 で, その間に $\mathcal{C}_{2}$ の最大 2 つのチェーンインスタンスが実行される可能性がある (\hlink{lemma3}{Lemma 3})
             \item $\mathcal{C}_{2}$ から $J_{3}^{1}$ への干渉シーケンスは, 一連のウィンドウ $\mathcal{Y}=\{ null, (1,3), null, (3,4)\}$ によって発生する
         \end{itemize}
     }{super_interfering_sequence_ex.jpg}
@@ -85,26 +85,26 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Lemma5}
+\begin{frame}[label=lemma5]{Lemma 5}
     \begin{lemma}[]
         $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\left[r_{i}, s_{i}\right)$ の時間間隔中にポーリングポイントが 1 つだけ存在する
     \end{lemma}
 \end{frame}
 
 
-\begin{frame}{Lemma6}
+\begin{frame}[label=lemma6]{Lemma 6}
     \begin{lemma}[]
         $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, 時間間隔 $\left[r_{i}, s_{i}\right)$ 中に $\overrightarrow{\mathcal{M}}_{k}$ の中で実行できるコールバックインスタンスは最大 2 つ
     \end{lemma}
 \end{frame}
 
-\begin{frame}{Lemma7}
+\begin{frame}[label=lemma7]{Lemma 7}
     \begin{lemma}[]
         $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, 干渉チェーン $\mathcal{C}_{k}$ からの 2 つのコールバックインスタンスが $\left[r_{i}, s_{i}\right)$ の時間間隔中に実行される場合, 2 番目のインスタンスは $c_{i}$ よりも高い優先度を持つ
     \end{lemma}
 \end{frame}
 
-\begin{frame}{Lemma8}
+\begin{frame}[label=lemma8]{Lemma 8}
     \begin{lemma}[]
         $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $m \geq|\Gamma|$ であれば $\left[r_{i}, s_{i}\right)$ の時間間隔中に $\mathcal{C}_{k}$ からのコールバックインスタンスは実行できない
     \end{lemma}
@@ -123,13 +123,13 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Lemma9}
+\begin{frame}[label=lemma9]{Lemma 9}
     \begin{lemma}[]
         $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ であり, $\mathcal{C}_{k}$ の 2 つ以上のコールバックが $\left[r_{i}, s_{i}\right)$ の間に実行される場合, 最初のコールバックを除くそれぞれのコールバックは, $c_{i}$ とは異なるコールバックグループに属しているか, $c_{i}$ よりも高い優先順位を持っている
     \end{lemma}
 \end{frame}
 
-\begin{frame}{Lemma10}
+\begin{frame}[label=lemma10]{Lemma 10}
     \begin{lemma}[]
         $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ であり, $m \geq \Gamma$ の場合, $c_{i}$ とは異なるコールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスは, $\mathcal{I}_{k, i}^{\mathcal{E}}$ にのみ寄与できる
     \end{lemma}
@@ -190,7 +190,7 @@
 
 \begin{frame}{以降の流れ}
     \begin{itemize}
-        \item 結果として得られる各サブ干渉シーケンスが Lemma 6-10 を満たす可能なウィンドウの組み合わせを全て列挙し, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を $\mathcal{Q}_{k}$ の安全な上界と見なすことができる
+        \item 結果として得られる各サブ干渉シーケンスが \hlink{lemma6}{Lemma 6}-10 を満たす可能なウィンドウの組み合わせを全て列挙し, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を $\mathcal{Q}_{k}$ の安全な上界と見なすことができる
         \item しかし, これは計算量の爆発になる可能性がある
         \item この問題を解決するために, まず, ウィンドウの境界の探索スペースを $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの境界に制限できることを示す
         \item 次に, 動的計画法 (DP) に基づくアルゴリズムを開発して, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ の上界を計算する
@@ -206,8 +206,8 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Lemma11}
-    Lemma 11 は, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を見つけるには, 境界が $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの開始/終了時間と一致するウィンドウのみを考慮する必要があることを示す
+\begin{frame}[label=lemma11]{Lemma 11}
+    \hlink{lemma11}{Lemma 11} は, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を見つけるには, 境界が $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの開始/終了時間と一致するウィンドウのみを考慮する必要があることを示す
     \begin{lemma}[]
         $\mathcal{Q}_{k}(\mathcal{Y}) \leq \max _{\forall j \in[a, b]}\left\{\mathcal{Q}_{k}\left(\mathcal{Y}_{j}\right)\right\}$
     \end{lemma}
