--- a/setting.tex
+++ b/setting.tex
@@ -162,7 +162,8 @@
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
-\newcommand{\tb}[1]{\textbf{#1}}
+% \newcommand{\tb}[1]{\textbf{#1}} Don't use
+\newcommand{\tb}[1]{#1}
 \newcommand{\notes}[1]{{\footnotesize\\※#1}}
 \newcommand{\db}[1]{\doublebox{#1}}
 \newcommand{\hlink}[2]{\hyperlink{#1}{\underline{#2} }}
